--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ h1 {
     font-family: 'sofia', sans-serif;
     font-size: 6.5rem;
 }
+hr {
+    border-top: 1px;
+    padding: 5px;
+    border-style: dashed;
+    border-color: var(--text-and-line-color);
+}
 
 body {
     background-color:rgb(20, 16, 16);
@@ -38,15 +44,18 @@ nav > li > a{
     color: var(--text-and-line-color);
 }
 
-main {
+section {
     color: var(--text-and-line-color);
-    max-width: 65vw;
-    margin: auto;
-    padding-top: 20vh;
+    padding: 10rem 0 5rem 0;
+    border-bottom: 1px dashed var(--text-and-line-color);
 }
 
-/* .about-me {
-} */
+section > div {
+    max-width: 65vw;
+    margin: auto;
+    font-size: 2rem;
+    font-family: 'Open Sans Light', sans-serif;
+}
 
 footer {
     height: 30vh;
