--- a/style.css
+++ b/style.css
@@ -68,12 +68,31 @@ section > div {
     justify-content: space-evenly;
 }
 
-/* .skills >ul >li {
-    padding-right: 8rem;
-}
- */
 .skills {
     text-align: center;
+}
+
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+img {
+    width: 100%;
+}
+
+.img-box {
+    width: 15rem;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 5px;
+    margin: 1rem;
+    padding: 1rem;
+    background-color: var(--highlight-color);
+}
+
+.img-box > a{
+    color: var(--text-and-line-color);
 }
 
 footer {
