--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ nav > li > a {
 .contact-btn {
   display: flex;
   justify-content: center;
-  margin: auto !important;
 }
 
 section {
@@ -136,7 +135,7 @@ img {
 }
 
 .project-btn {
-  width: 10rem;
+  width: 8rem;
   margin: 0.5rem 0;
   padding: 0.8rem;
   background-color: var(--text-and-line-color);
@@ -237,12 +236,12 @@ footer > h3 {
   }
 
   .project-btn-div {
-    width: 15rem;
+    width: 17rem;
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+    align-items: center;
     margin: auto;
-  }
-
-  .project-btn {
-    width: 100%;
   }
 }
 
@@ -251,6 +250,9 @@ footer > h3 {
     font-size: 2.5rem;
   }
 
+  nav {
+    padding: 1.5rem 0;
+}
   nav li {
     font-size: 24px;
   }
@@ -265,8 +267,21 @@ footer > h3 {
 }
 
 @media (max-width: 425px) {
+    .project-btn-div {
+        width: 15rem;
+    }
+
+    .project-btn {
+        width: 6.5rem;
+    }
+
   .form {
     width: 15rem;
+  }
+
+  .form-btn {
+    display: flex;
+    justify-content: center;
   }
 
   footer > ul > li > a {
