--- a/style.css
+++ b/style.css
@@ -11,6 +11,59 @@
   box-sizing: border-box;
 }
 
+/* Animations */
+.word {
+  animation: color-animation 5s linear infinite;
+}
+
+.word-1 {
+  --color-1: #df8453;
+  --color-2: #3d8dae;
+  --color-3: #e4a9a8;
+}
+
+.word-2 {
+  --color-1: #dbad4a;
+  --color-2: #accfcb;
+  --color-3: #17494d;
+}
+
+.word-3 {
+  --color-1: #accfcb;
+  --color-2: #e4a9a8;
+  --color-3: #accfcb;
+}
+
+.word-4 {
+  --color-1: #3d8dae;
+  --color-2: #df8453;
+  --color-3: #e4a9a8;
+}
+
+@keyframes color-animation {
+  0% {
+    color: var(--color-1);
+  }
+  32% {
+    color: var(--color-1);
+  }
+  33% {
+    color: var(--color-2);
+  }
+  65% {
+    color: var(--color-2);
+  }
+  66% {
+    color: var(--color-3);
+  }
+  99% {
+    color: var(--color-3);
+  }
+  100% {
+    color: var(--color-1);
+  }
+}
+
 h1 {
   font-family: "sofia", sans-serif;
   font-size: 4rem;
@@ -252,7 +305,7 @@ footer > h3 {
 
   nav {
     padding: 1.5rem 0;
-}
+  }
   nav li {
     font-size: 24px;
   }
@@ -267,13 +320,13 @@ footer > h3 {
 }
 
 @media (max-width: 425px) {
-    .project-btn-div {
-        width: 15rem;
-    }
+  .project-btn-div {
+    width: 15rem;
+  }
 
-    .project-btn {
-        width: 6.5rem;
-    }
+  .project-btn {
+    width: 6.5rem;
+  }
 
   .form {
     width: 15rem;
