--- a/style.css
+++ b/style.css
@@ -197,6 +197,7 @@ img {
   font-weight: 600;
   border-radius: 3px;
   cursor: pointer;
+  transition: background-color 2s, color 2s, border 2s;
 }
 
 .project-btn:hover {
@@ -231,10 +232,12 @@ textarea:focus {
   border: none;
   cursor: pointer;
   margin-top: 1px;
+  transition: background-color 2s, color 2s, border 2s;
 }
 
 .btn:hover {
   background-color: rgb(126, 47, 47);
+  color: white;
 }
 
 footer {
