--- a/style.css
+++ b/style.css
@@ -198,7 +198,6 @@
 }
 
 .overlay {
-  background-color: rgb(20, 16, 16);
   position: fixed;
   z-index: -1;
   width: 100%;
@@ -240,7 +239,7 @@ hr {
 }
 
 body {
-  background-color: transparent;
+  background-color: rgb(20, 16, 16);
   font-family: "Matchbook", sans-serif;
 }
 
@@ -302,6 +301,7 @@ section > div {
 .skills {
   text-align: center;
   font-size: 20px;
+  width: 50rem;
 }
 
 .projects {
